--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -14,6 +14,7 @@
 
 	<div class="page-header text-center">
 		<h1><span class="fa fa-anchor"></span> Profile Page</h1>
+		<a href="/todo" class="btn btn-default btn-sm">Todo</a>
 		<a href="/logout" class="btn btn-default btn-sm">Logout</a>
 	</div>
 
@@ -28,6 +29,21 @@
 						<strong>id</strong>: <%= user._id %><br>
 						<strong>email</strong>: <%= user.local.email %><br>
 						<strong>password</strong>: <%= user.local.password %>
+					</p>
+
+			</div>
+		</div>
+
+		<!-- GOOGLE INFORMATION -->
+		<div class="col-sm-6">
+			<div class="well">
+				<h3 class="text-danger"><span class="fa fa-google-plus"></span> Google</h3>
+
+					<p>
+						<strong>id</strong>: <%= user.google.id %><br>
+						<strong>token</strong>: <%= user.google.token %><br>
+						<strong>email</strong>: <%= user.google.email %><br>
+						<strong>name</strong>: <%= user.google.name %>
 					</p>
 
 			</div>
